--- a/css/style.css
+++ b/css/style.css
@@ -853,3 +853,8 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 * {
   font-family: 'Karla';
 }
+
+.li_img {
+  opacity: 0;
+  max-width: 2em;
+}
